DP-3153 - Link list - Fixed bullets to align top

--- a/styleguide/source/assets/scss/03-organisms/_link-list.scss
+++ b/styleguide/source/assets/scss/03-organisms/_link-list.scss
@@ -41,8 +41,12 @@
     }
   }
 
-  .main-content--full .page-content > & &__item {
+  &__item {
     padding: 5px 0;
+
+    .ma__decorative-link {
+      display: block;
+    }
   }
 
   .sidebar &__item + &__item {
@@ -50,6 +54,7 @@
     border-top-style: solid;
     margin-top: 25px;
     padding-top: 25px;
+    padding-bottom: 0;
   }
 
   .sidebar &__item {
